20301160_Lab2/y.output
Terminals unused in grammar

   DO
   BREAK
   CONTINUE
   CHAR
   DOUBLE
   SWITCH
   CASE
   DEFAULT


State 106 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN RPAREN compound_statement

    8 parameter_list: parameter_list COMMA type_specifier ID
    9               | parameter_list COMMA type_specifier
   10               | type_specifier ID
   11               | type_specifier

   12 compound_statement: LCURL statements RCURL
   13                   | LCURL RCURL

   14 var_declaration: type_specifier declaration_list SEMICOLON

   15 type_specifier: INT
   16               | FLOAT
   17               | VOID

   18 declaration_list: declaration_list COMMA ID
   19                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   20                 | ID
   21                 | ID LTHIRD CONST_INT RTHIRD

   22 statements: statement
   23           | statements statement

   24 statement: var_declaration
   25          | expression_statement
   26          | compound_statement
   27          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   28          | IF LPAREN expression RPAREN statement
   29          | IF LPAREN expression RPAREN statement ELSE statement
   30          | PRINTLN LPAREN ID RPAREN SEMICOLON
   31          | RETURN expression SEMICOLON
   32          | WHILE LPAREN expression RPAREN statement

   33 expression_statement: SEMICOLON
   34                     | expression SEMICOLON

   35 variable: ID
   36         | ID LTHIRD expression RTHIRD

   37 expression: logic_expression
   38           | variable ASSIGNOP logic_expression

   39 logic_expression: rel_expression
   40                 | rel_expression LOGICOP rel_expression

   41 rel_expression: simple_expression
   42               | simple_expression RELOP simple_expression

   43 simple_expression: term
   44                  | simple_expression ADDOP term

   45 term: unary_expression
   46     | term MULOP unary_expression

   47 unary_expression: ADDOP unary_expression
   48                 | NOT unary_expression
   49                 | factor

   50 factor: variable
   51       | ID LPAREN argument_list RPAREN
   52       | LPAREN expression RPAREN
   53       | CONST_INT
   54       | CONST_FLOAT
   55       | variable INCOP
   56       | variable DECOP

   57 argument_list: arguments

   58 arguments: arguments COMMA logic_expression
   59          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 28 29
ELSE (259) 29
FOR (260) 27
WHILE (261) 32
DO (262)
BREAK (263)
CONTINUE (264)
RETURN (265) 31
INT (266) 15
FLOAT (267) 16
CHAR (268)
VOID (269) 17
DOUBLE (270)
SWITCH (271)
CASE (272)
DEFAULT (273)
PRINTLN (274) 30
ADDOP (275) 44 47
MULOP (276) 46
INCOP (277) 55
DECOP (278) 56
RELOP (279) 42
ASSIGNOP (280) 38
LOGICOP (281) 40
NOT (282) 48
LPAREN (283) 6 7 27 28 29 30 32 51 52
RPAREN (284) 6 7 27 28 29 30 32 51 52
LCURL (285) 12 13
RCURL (286) 12 13
LTHIRD (287) 19 21 36
RTHIRD (288) 19 21 36
SEMICOLON (289) 14 30 31 33 34
COMMA (290) 8 9 18 19 58
ID (291) 6 7 8 10 18 19 20 21 30 35 36 51
CONST_INT (292) 19 21 53
CONST_FLOAT (293) 54


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
start (40)
    on left: 1, on right: 0
program (41)
    on left: 2 3, on right: 1 2
unit (42)
    on left: 4 5, on right: 2 3
func_definition (43)
    on left: 6 7, on right: 5
parameter_list (44)
    on left: 8 9 10 11, on right: 6 8 9
compound_statement (45)
    on left: 12 13, on right: 6 7 26
var_declaration (46)
    on left: 14, on right: 4 24
type_specifier (47)
    on left: 15 16 17, on right: 6 7 8 9 10 11 14
declaration_list (48)
    on left: 18 19 20 21, on right: 14 18 19
statements (49)
    on left: 22 23, on right: 12 23
statement (50)
    on left: 24 25 26 27 28 29 30 31 32, on right: 22 23 27 28 29 32
expression_statement (51)
    on left: 33 34, on right: 25 27
variable (52)
    on left: 35 36, on right: 38 50 55 56
expression (53)
    on left: 37 38, on right: 27 28 29 31 32 34 36 52
logic_expression (54)
    on left: 39 40, on right: 37 38 58 59
rel_expression (55)
    on left: 41 42, on right: 39 40
simple_expression (56)
    on left: 43 44, on right: 41 42 44
term (57)
    on left: 45 46, on right: 43 44 46
unary_expression (58)
    on left: 47 48 49, on right: 45 46 47 48
factor (59)
    on left: 50 51 52 53 54 55 56, on right: 49
argument_list (60)
    on left: 57, on right: 51
arguments (61)
    on left: 58 59, on right: 57 58


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 1

   15 type_specifier: INT .

    $default  reduce using rule 15 (type_specifier)


State 2

   16 type_specifier: FLOAT .

    $default  reduce using rule 16 (type_specifier)


State 3

   17 type_specifier: VOID .

    $default  reduce using rule 17 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 10


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 8

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 9

    6 func_definition: type_specifier . ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier . ID LPAREN RPAREN compound_statement
   14 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 12

    declaration_list  go to state 13


State 10

    0 $accept: start $end .

    $default  accept


State 11

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 12

    6 func_definition: type_specifier ID . LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID . LPAREN RPAREN compound_statement
   20 declaration_list: ID .
   21                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 14
    LTHIRD  shift, and go to state 15

    $default  reduce using rule 20 (declaration_list)


State 13

   14 var_declaration: type_specifier declaration_list . SEMICOLON
   18 declaration_list: declaration_list . COMMA ID
   19                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    SEMICOLON  shift, and go to state 16
    COMMA      shift, and go to state 17


State 14

    6 func_definition: type_specifier ID LPAREN . parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN . RPAREN compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 18

    parameter_list  go to state 19
    type_specifier  go to state 20


State 15

   21 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 21


State 16

   14 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 14 (var_declaration)


State 17

   18 declaration_list: declaration_list COMMA . ID
   19                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 22


State 18

    7 func_definition: type_specifier ID LPAREN RPAREN . compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 24


State 19

    6 func_definition: type_specifier ID LPAREN parameter_list . RPAREN compound_statement
    8 parameter_list: parameter_list . COMMA type_specifier ID
    9               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


State 20

   10 parameter_list: type_specifier . ID
   11               | type_specifier .

    ID  shift, and go to state 27

    $default  reduce using rule 11 (parameter_list)


State 21

   21 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 28


State 22

   18 declaration_list: declaration_list COMMA ID .
   19                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 29

    $default  reduce using rule 18 (declaration_list)


State 23

   12 compound_statement: LCURL . statements RCURL
   13                   | LCURL . RCURL

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    RETURN       shift, and go to state 33
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    PRINTLN      shift, and go to state 34
    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    LCURL        shift, and go to state 23
    RCURL        shift, and go to state 38
    SEMICOLON    shift, and go to state 39
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statements            go to state 46
    statement             go to state 47
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


State 24

    7 func_definition: type_specifier ID LPAREN RPAREN compound_statement .

    $default  reduce using rule 7 (func_definition)


State 25

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN . compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 57


State 26

    8 parameter_list: parameter_list COMMA . type_specifier ID
    9               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 58


State 27

   10 parameter_list: type_specifier ID .

    $default  reduce using rule 10 (parameter_list)


State 28

   21 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 21 (declaration_list)


State 29

   19 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 59


State 30

   28 statement: IF . LPAREN expression RPAREN statement
   29          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 60


State 31

   27 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 61


State 32

   32 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 62


State 33

   31 statement: RETURN . expression SEMICOLON

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    variable           go to state 49
    expression         go to state 63
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 34

   30 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 64


State 35

   47 unary_expression: ADDOP . unary_expression

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    variable          go to state 65
    unary_expression  go to state 66
    factor            go to state 56


State 36

   48 unary_expression: NOT . unary_expression

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    variable          go to state 65
    unary_expression  go to state 67
    factor            go to state 56


State 37

   52 factor: LPAREN . expression RPAREN

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    variable           go to state 49
    expression         go to state 68
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 38

   13 compound_statement: LCURL RCURL .

    $default  reduce using rule 13 (compound_statement)


State 39

   33 expression_statement: SEMICOLON .

    $default  reduce using rule 33 (expression_statement)


State 40

   35 variable: ID .
   36         | ID . LTHIRD expression RTHIRD
   51 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 69
    LTHIRD  shift, and go to state 70

    $default  reduce using rule 35 (variable)


State 41

   53 factor: CONST_INT .

    $default  reduce using rule 53 (factor)


State 42

   54 factor: CONST_FLOAT .

    $default  reduce using rule 54 (factor)


State 43

   26 statement: compound_statement .

    $default  reduce using rule 26 (statement)


State 44

   24 statement: var_declaration .

    $default  reduce using rule 24 (statement)


State 45

   14 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 71

    declaration_list  go to state 13


State 46

   12 compound_statement: LCURL statements . RCURL
   23 statements: statements . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    RETURN       shift, and go to state 33
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    PRINTLN      shift, and go to state 34
    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    LCURL        shift, and go to state 23
    RCURL        shift, and go to state 72
    SEMICOLON    shift, and go to state 39
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
